Amélioration des styles du composant Footer.astro
- Ajout d'effets de survol avec soulignement pour les éléments de liste et les liens, améliorant ainsi l'interaction utilisateur.
- Révision des classes CSS pour une meilleure cohérence visuelle et une présentation plus engageante des informations de contact et d'expertise.
- Intégration de nouveaux domaines d'expertise dans la section appropriée pour enrichir le contenu proposé.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -54,19 +54,29 @@ const currentYear = new Date().getFullYear();
           <span class="flex-shrink-0">Le Cabinet</span>
         </h3>
         <ul class="space-y-3">
-          <li class="transition-colors duration-200 hover:text-caribbean-500">
+          <li
+            class="transition-colors duration-200 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
+          >
             SCP Crouzatier / Pobéda-Thomas
           </li>
-          <li class="transition-colors duration-200 hover:text-caribbean-500">
+          <li
+            class="transition-colors duration-200 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
+          >
             Cabinet d'avocats
           </li>
-          <li class="transition-colors duration-200 hover:text-caribbean-500">
+          <li
+            class="transition-colors duration-200 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
+          >
             Structure de proximité
           </li>
-          <li class="transition-colors duration-200 hover:text-caribbean-500">
+          <li
+            class="transition-colors duration-200 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
+          >
             Relation directe avec ses clients
           </li>
-          <li class="transition-colors duration-200 hover:text-caribbean-500">
+          <li
+            class="transition-colors duration-200 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
+          >
             Clientèle variée: entreprises, particuliers, associations
           </li>
         </ul>
@@ -88,7 +98,7 @@ const currentYear = new Date().getFullYear();
           <li>
             <a
               href="#expertise"
-              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
             >
               <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Droit
               fiscal
@@ -97,7 +107,7 @@ const currentYear = new Date().getFullYear();
           <li>
             <a
               href="#expertise"
-              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
             >
               <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Droit
               des affaires
@@ -106,7 +116,7 @@ const currentYear = new Date().getFullYear();
           <li>
             <a
               href="#expertise"
-              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
             >
               <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Droit
               social
@@ -115,10 +125,55 @@ const currentYear = new Date().getFullYear();
           <li>
             <a
               href="#expertise"
-              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
             >
               <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Droit
               de la famille
+            </a>
+          </li>
+          <li>
+            <a
+              href="#expertise"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
+            >
+              <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Propriété
+              Intellectuelle
+            </a>
+          </li>
+          <li>
+            <a
+              href="#expertise"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
+            >
+              <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Contentieux
+              Divers
+            </a>
+          </li>
+          <li>
+            <a
+              href="#expertise"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
+            >
+              <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Rédactions
+              d'Actes
+            </a>
+          </li>
+          <li>
+            <a
+              href="#expertise"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
+            >
+              <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Droit
+              Immobilier
+            </a>
+          </li>
+          <li>
+            <a
+              href="#expertise"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
+            >
+              <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Droit
+              des Contrats
             </a>
           </li>
         </ul>
@@ -140,28 +195,28 @@ const currentYear = new Date().getFullYear();
           <li>
             <a
               href="#equipe"
-              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center hover:underline decoration-caribbean-500"
             >
               <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Me Yves
               Crouzatier
             </a>
           </li>
           <li
-            class="transition-colors duration-200 hover:text-caribbean-500 pl-5"
+            class="transition-colors duration-200 hover:text-caribbean-500 pl-5 hover:underline decoration-caribbean-500"
           >
             Spécialiste en droit fiscal
           </li>
           <li>
             <a
               href="#equipe"
-              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center mt-2"
+              class="transition-all duration-200 hover:text-caribbean-500 hover:pl-1 flex items-center mt-2 hover:underline decoration-caribbean-500"
             >
               <span class="text-caribbean-500 mr-1 flex-shrink-0">›</span> Me Florence
               Pobéda-Thomas
             </a>
           </li>
           <li
-            class="transition-colors duration-200 hover:text-caribbean-500 pl-5"
+            class="transition-colors duration-200 hover:text-caribbean-500 pl-5 hover:underline decoration-caribbean-500"
           >
             Spécialiste en droit de la famille et droit du travail
           </li>
@@ -201,7 +256,9 @@ const currentYear = new Date().getFullYear();
                 stroke-width="2"
                 d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
             </svg>
-            <span class="text-jet-400 hover:text-caribbean-500">
+            <span
+              class="text-jet-400 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
+            >
               151 Route de Toulouse<br />31270 Cugnaux
             </span>
           </li>
@@ -222,7 +279,7 @@ const currentYear = new Date().getFullYear();
             </svg>
             <a
               href="tel:0562872555"
-              class="transition-colors duration-200 hover:text-caribbean-500"
+              class="transition-colors duration-200 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
               >05 62 87 25 55</a
             >
           </li>
@@ -243,7 +300,7 @@ const currentYear = new Date().getFullYear();
             </svg>
             <a
               href="mailto:sep@avocats-diane.fr"
-              class="transition-colors duration-200 hover:text-caribbean-500"
+              class="transition-colors duration-200 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
               >sep@avocats-diane.fr</a
             >
           </li>
@@ -261,7 +318,9 @@ const currentYear = new Date().getFullYear();
                 stroke-width="2"
                 d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
             </svg>
-            <span class="text-jet-400 hover:text-caribbean-500">
+            <span
+              class="text-jet-400 hover:text-caribbean-500 hover:underline decoration-caribbean-500"
+            >
               Du Lundi au Vendredi<br />8h00 - 18h00
             </span>
           </li>
@@ -333,7 +392,7 @@ const currentYear = new Date().getFullYear();
         <div class="flex space-x-6 mt-4 md:mt-0">
           <a
             href="/plan-du-site"
-            class="text-sm hover:text-jet-500 transition-colors flex items-center"
+            class="text-sm hover:text-jet-500 transition-colors flex items-center hover:underline decoration-jet-500"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -353,7 +412,7 @@ const currentYear = new Date().getFullYear();
           </a>
           <a
             href="/mentions-legales"
-            class="text-sm hover:text-jet-500 transition-colors flex items-center"
+            class="text-sm hover:text-jet-500 transition-colors flex items-center hover:underline decoration-jet-500"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
