Correction de l'importation du composant HeaderLink dans Header.astro
- Remplacement de l'importation de HeaderLink par une importation correcte depuis le fichier HeaderLink.astro, assurant ainsi le bon fonctionnement du composant.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { MainNav } from "./MainNav";
 import { ActionButtons } from "./ActionButtons";
-import { HeaderLink } from "./HeaderLink";
+import HeaderLink from "./HeaderLink.astro";
 ---
 
 <header class="fixed w-full bg-white/80 backdrop-blur-md z-50 border-b">
