Ajout du reCAPTCHA dans le formulaire de contact
- Intégration d'un élément reCAPTCHA pour renforcer la sécurité du formulaire de contact.
- Mise à jour des commentaires pour refléter les changements apportés.

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -347,7 +347,8 @@ import SectionDecoration from "./SectionDecoration.astro";
                     >.
                   </label>
                 </div>
-                {/* Netlify injectera le reCAPTCHA ici */}
+                {/* Ajout du reCAPTCHA */}
+                <div data-netlify-recaptcha="true"></div>
                 <Button
                   type="submit"
                   className="w-full scale-hover"
